--- a/_extensions/include-code-files/_extension.yml
+++ b/_extensions/include-code-files/_extension.yml
@@ -1,5 +1,5 @@
 name: include-code-files
-author: Sam Edwardes
+author: Bruno Beaufils, Sam Edwardes
 version: 1.0.0
 quarto-required: ">=1.2.0"
 contributes:
